Removed Data Attributes and now the current color is not changing link and color code text colors

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <div class="colorflip">
-        <h1>Current Color: <span class="color" data-text-color="#000">#f1f5f8</span></h1>
+        <h1>Current Color: <span class="color">#f1f5f8</span></h1>
         <button class="flip">Flip!</button>
       </div>
     </main>
