--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hexter</title>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,9 @@
       </div>
     </main>
     <footer>
-      <p>Author: <a class="link" href="https://github.com/wojcraft">Wojcraft</a></p>
+      <p>
+        Author: <a class="link" href="https://github.com/wojcraft">Wojcraft</a>
+      </p>
     </footer>
     <script type="module" src="./main.js"></script>
   </body>
