Move styles.css and main.js to dedicated directories, extract getColor() function

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hexter</title>
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
@@ -23,6 +23,6 @@
         Author: <a class="link" href="https://github.com/wojcraft">Wojcraft</a>
       </p>
     </footer>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
